# ivp-asignaciones-financieras

./: .env  .gitignore  README.md  main.py  pyproject.toml
src/: 100_cargas_trabajo.ipynb  200_calculadora_avance.ipynb  300_anexo_v.ipynb  400_requerimiento_recursos.ipynb
src/data/cabanaconde/4/: cargas_trabajo.json
src/data/callacalla/4/: cargas_trabajo.json
src/data/ccanaseta/4/: cargas_trabajo.json
src/data/general_data/: actividades.json
src/data/misanayoc/4/: cargas_trabajo.json
src/output/: borrar.json
src/output/cabanaconde/4/: cargas_trabajo.json  cargas_trabajo.xlsx
src/output/callacalla/4/: cargas_trabajo.json  cargas_trabajo.xlsx
src/output/canocota/4/: cargas_trabajo.json  cargas_trabajo.xlsx
src/output/ccanaseta/4/: cargas_trabajo.json  cargas_trabajo.xlsx
src/output/misanayoc/4/: cargas_trabajo.json  cargas_trabajo.xlsx
src/output/sibayo/4/: cargas_trabajo.json  cargas_trabajo.xlsx
