[project]
name = "asignaciones-financieras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "excel2img>=1.4.0",
    "firebase-admin>=6.8.0",
    "google-cloud-firestore>=2.20.2",
    "ipykernel>=6.29.5",
    "notebook>=7.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "xlsxwriter>=3.2.3",
]
